fix: remove fixed width from tracker button and adjust spacing in tracker component

--- a/src/css/css_styles2.css
+++ b/src/css/css_styles2.css
@@ -691,7 +691,6 @@ input#txt_defaultSwarmDistance {
 }
 
 .flgtctrlbtn {
-	width: 70px !important;
 	height: 30px !important;
 	font-size: 11px !important;
 	font-weight: bold !important;
